--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -238,8 +238,8 @@
             <!-- Q2 -->
             <li id="q2">
               <div class="enunciado">
-                <strong>2) Conversão interna.</strong>
-                <p>Quem tem maior energia: elétron de conversão interna da <strong>camada L</strong> ou da <strong>camada M</strong>, para a mesma energia nuclear de excitação?</p>
+                <strong>2) Qual destes possui a maior energia:</strong>
+                <p>um elétron de conversão interna da camada L ou da camada M, se ambos vieram da mesma energia (nuclear) de excitação?</p>
               </div>
               <div class="resposta">
                 <strong>Resposta 2.</strong>
@@ -250,8 +250,8 @@
             <!-- Q3 -->
             <li id="q3">
               <div class="enunciado">
-                <strong>3) Aceleração de partícula alfa.</strong>
-                <p>Valor da <strong>máxima energia</strong> para um <em>He<sup>2+</sup></em> (partícula alfa) acelerado por gerador DC de 3 MeV.</p>
+                <strong>3) <em>He<sup>2+</sup></em></strong>
+                <p>Qual o valor da máxima energia que um átomo de hélio duplamente ionizado (partícula alfa) pode ser acelerado por um gerador de tensão contínua com tensão máxima de 3 MeV?</p>
               </div>
               <div class="resposta">
                 <strong>Resposta 3.</strong>
@@ -262,13 +262,13 @@
             <!-- Q4 -->
             <li id="q4">
               <div class="enunciado">
-                <strong>4) Perda de energia de prótons em Si.</strong>
-                <p>Usando a figura, estime a <strong>energia restante</strong> de prótons de 5 MeV após 100 µm de Si.</p>
+                <strong>4) Com o auxílio da figura dada,</strong>
+                <p>estime a energia restante de um feixe de prótons de 5 MeV após passar por 100 µm num bloco de Si.</p>
                 <figure>
                   <img
                     class="fig-fixed"
                     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-4.png?raw=1"
-                    alt="Prótons em Si - figura do exercício 4"
+                    alt="Figura do exercício 4"
                   />
                   <figcaption>Figura - Prótons em Si.</figcaption>
                 </figure>
@@ -282,18 +282,20 @@
             <!-- Q5 -->
             <li id="q5">
               <div class="enunciado">
-                <strong>5) Energia perdida por alfas em Au.</strong>
-                <p>Usando a figura, determine a <strong>energia depositada</strong> por partículas alfa de 1 MeV após 5 µm de ouro.</p>
+                <strong>5) Com o auxílio da figura dada, determine o valor aproximado da energia perdida (depositada) por um feixe de partículas alfa de 1 MeV após atravessar uma espessura de 5 µm num bloco de ouro.</strong>
+                <p>Obs.: 
+                  a) O eixo vertical da figura é a variação de energia dividida pela densidade do meio:</p>
                 <ul class="muted" style="margin:6px 0;">
-                  <li>Eixo vertical: \( -\frac{dE}{dx}\big/\rho \)</li>
-                  <li>Considere \( \rho_{Au}=19,32\ \text{g·cm}^{-3} \)</li>
-                  <li>\( \Delta E \approx -(dE/dx)\cdot t \)</li>
+                  <li>( considere a densidade do ouro como \rho_{Au}=19,32\ \text{g·cm}^{-3} \ ): \( -\frac{dE}{dx}\big/\rho \)</li>
+                	
+                  b) A perda esperada de energia é dada por     
+                  <li>\( \Delta E \approx -(dE/dx)\cdot t \)</li> ( t é a espessura em cm).
                 </ul>
                 <figure>
                   <img
                     class="fig-fixed"
                     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-5.png?raw=1"
-                    alt="Alfas em ouro - figura do exercício 5"
+                    alt="Figura do exercício 5"
                   />
                   <figcaption>Figura - Alfas em Au.</figcaption>
                 </figure>
@@ -308,21 +310,20 @@
             <li id="q6">
               <div class="enunciado">
                 <strong>6) Range de elétrons em Al (Bragg - Kleeman).</strong>
-                <p>Com a figura e a lei de Bragg - Kleeman, estime a <strong>espessura que para</strong> elétrons de 1 MeV em alumínio.</p>
+                <p>Com o auxílio da figura dada e empregando a lei de Bragg-Kleeman (ou scaling law), estime a espessura de absorção total da energia cinética (espessura que irá parar uma partícula ou range) para um feixe de elétrons a 1 MeV em alumínio.</p>
                 <div class="eq">
-                  <strong>Dados:</strong>
                   \( \rho_{Al}=2,699\ \text{g·cm}^{-3} \),
                   \( A_{Al}=26,98 \),
                   \( A_{Si}=28,09 \)
                   <br />
-                  <strong>Lei:</strong>
-                  \( \displaystyle \frac{R_1}{R_2}=\frac{\rho_2}{\rho_1}\cdot\frac{A_1}{A_2} \)
+                  <strong>Bragg-Kleeman:</strong>
+                  \( \displaystyle \frac{R_1}{R_2}=\frac{\rho_2}{\rho_1}\cdot\frac{A_1}{A_2} \) onde ρ é a densidade em g/cm3 e  A é o peso atômico.
                 </div>
                 <figure>
                   <img
                     class="fig-fixed"
                     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-6.png?raw=1"
-                    alt="Elétrons em Al - figura do exercício 6"
+                    alt="Figura do exercício 6"
                   />
                   <figcaption>Figura - Elétrons em Al.</figcaption>
                 </figure>
@@ -336,8 +337,8 @@
             <!-- Q7 -->
             <li id="q7">
               <div class="enunciado">
-                <strong>7) Range - alfas em Au.</strong>
-                <p>Repita o exercício anterior para partículas alfa de 3 MeV em ouro (use a figura do exercício 6).</p>
+                <strong>7) Repetir o exercício 8 usando um feixe de partículas alfa de 3 MeV em ouro.</strong>
+                <p>(use a figura do exercício 6).</p>
               </div>
               <div class="resposta">
                 <strong>Resposta 7.</strong>
@@ -348,9 +349,12 @@
             <!-- Q8 -->
             <li id="q8">
               <div class="enunciado">
-                <strong>8) Tempo de parada de partícula alfa.</strong>
-                <p>Estime o <strong>tempo</strong> para uma alfa de 5 MeV parar em Si. Repita para gás hidrogênio.</p>
-                <p class="muted">Use, por exemplo, \(R_{Si}=2.1\times10^{-5}\ \text{m}\) e \(R_H=0.1\ \text{m}\).</p>
+                <strong>8) Estimar o tempo necessário para uma partícula alfa de 5 MeV desacelerar e parar num bloco de Si.</strong>
+                <p>Repita para gás hidrogênio.</p> 
+                <p class="muted">Considerar \(R_{Si}=2.1\times10^{-5}\ \text{m}\) e \(R_H=0.1\ \text{m}\).</p>
+               <li>Qual a frequência da onda em Hz?</li>
+               <li>Quantas ondas existem por metro?</li>
+               <li>Qual a velocidade escalar de propagação?</li>
               </div>
               <div class="resposta">
                 <strong>Resposta 8.</strong>
@@ -361,12 +365,12 @@
             <!-- Q9 -->
             <li id="q9">
               <div class="enunciado">
-                <strong>9) Onda senoidal (SI).</strong>
-                <p>Para \( y(x,t)=0,00327\sin(72,1x-2,72t) \) (m):</p>
+                <strong>9) Uma onda senoidal propaga-se de acordo com a expressão.</strong>
+                <p> \( y(x,t)=0,00327\sen(72,1x-2,72t), onde y é dado em metros (SI). \) (m):</p>
                 <ol class="sub">
-                  <li>Frequência (Hz)</li>
-                  <li>Número de ondas por metro</li>
-                  <li>Velocidade de propagação</li>
+                  <li>Qual a frequência da onda em Hz?</li>
+                  <li>Quantas ondas existem por metro?</li>
+                  <li>Qual a velocidade escalar de propagação?</li>
                 </ol>
               </div>
               <div class="resposta">
@@ -378,8 +382,9 @@
             <!-- Q10 -->
             <li id="q10">
               <div class="enunciado">
-                <strong>10) Onda eletromagnética.</strong>
-                <p>Para \( y(x,t)=7,5\sin(1,2\times10^{7}x-3,623\times10^{15}t)\ \text{V/m} \): repita os itens do exercício anterior, calcule a <strong>amplitude do campo magnético</strong>, localize no <strong>espectro eletromagnético</strong> e, se visível, <strong>cor</strong>.</p>
+                <strong>10) Repetir os itens do exercício anterior para a onda:</strong>
+                <p> \( y(x,t)=7,5\sin(1,2\times10^{7}x-3,623\times10^{15}t)\ \text{V/m} \): 
+                  Sendo esta a componente campo elétrico de uma onda eletromagnética, calcule a amplitude do campo magnético correspondente, encontre sua localização no espectro eletromagnético e diga em que faixa se encontra. No caso de estar no espectro visível, qual é a cor correspondente?.</p>
               </div>
               <div class="resposta">
                 <strong>Resposta 10.</strong>
@@ -390,12 +395,11 @@
             <!-- Q11 -->
             <li id="q11">
               <div class="enunciado">
-                <strong>11) TV analógica x Rádio FM.</strong>
-                <p>Canal 6 inicia em 82 MHz. Cada canal tem 6 MHz de banda.</p>
+                <strong>11) O canal 6 no antigo sistema de televisão convencional (analógico) ocupa uma faixa de frequências que inicia em 82 MHz. Sabendo que a banda para cada canal de TV é de 6 MHz:</strong>
                 <ol class="sub">
-                  <li>Banda do canal 6 em comprimento de onda</li>
-                  <li>Banda em número de onda</li>
-                  <li>É possível ouvir o áudio no FM (88 - 108 MHz)?</li>
+                  <li>Calcule a banda do canal 6 em comprimento de onda</li>
+                  <li>Idem para número de onda</li>
+                  <li>É possível ouvir o áudio do canal 6 num receptor de rádio FM?  Banda FM:  88 a 108 MHz</li>
                 </ol>
               </div>
               <div class="resposta">
@@ -407,8 +411,8 @@
             <!-- Q12 -->
             <li id="q12">
               <div class="enunciado">
-                <strong>12) Fóton gama.</strong>
-                <p>Para um fóton de 1,35 MeV: calcule <strong>comprimento de onda</strong> e <strong>número de onda</strong>.</p>
+                <strong>12) Durante uma desintegração radioativa, um núcleo emite raio gama, cujo fóton tem energia de 1,35 MeV.</strong>
+                <p>Qual é o comprimento de onda e o número de onda correspondente a este fóton?</p>
               </div>
               <div class="resposta">
                 <strong>Resposta 12.</strong>
@@ -419,14 +423,14 @@
             <!-- Q13 -->
             <li id="q13">
               <div class="enunciado">
-                <strong>13) Lei de Wien.</strong>
-                <p>As figuras mostram espectros de dois corpos (A e B). Pela Lei de Wien, determine a <strong>temperatura</strong> (°C) de cada um.</p>
+                <strong>13) As figuras abaixo mostram os espectros obtidos de dois corpos aquecidos.</strong>
+                <p>Com base na Lei de Wien, determine a temperatura de ambos em graus Celsius.</p>
                 <div style="display:flex; gap:20px; justify-content:center; flex-wrap:wrap;">
                   <figure>
                     <img
                       class="fig-pair"
                       src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-13-a.png?raw=1"
-                      alt="Corpo A"
+                      alt="A"
                     />
                     <figcaption>Corpo A</figcaption>
                   </figure>
@@ -434,7 +438,7 @@
                     <img
                       class="fig-pair"
                       src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-13-b.png?raw=1"
-                      alt="Corpo B"
+                      alt="B"
                     />
                     <figcaption>Corpo B</figcaption>
                   </figure>
@@ -449,8 +453,8 @@
             <!-- Q14 -->
             <li id="q14">
               <div class="enunciado">
-                <strong>14) Série de Balmer (H).</strong>
-                <p>Usando a equação de Rydberg, determine as <strong>frequências</strong> para os dois primeiros valores de k na série de Balmer. Indique a <strong>faixa</strong> do espectro e a <strong>cor</strong> se for visível.</p>
+                <strong>14) A partir da equação de Rydberg, determine, para o hidrogênio, as frequências dos dois primeiros valores para k, na série de Balmer.</strong>
+                <p>Para cada um dos resultados identifique a faixa do espectro e, caso seja o espectro visível, a cor correspondente.</p>
               </div>
               <div class="resposta">
                 <strong>Resposta 14.</strong>
@@ -462,7 +466,7 @@
             <li id="q15">
               <div class="enunciado">
                 <strong>15) Série de Lyman (H).</strong>
-                <p>Repita para a série de Lyman (dois primeiros valores pares de k).</p>
+                <p>Repetir o exercício 12 para a série de Lyman para os dois primeiros valores pares de k.</p>
               </div>
               <div class="resposta">
                 <strong>Resposta 15.</strong>
