--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -230,7 +230,19 @@
               </div>
               <div class="resposta">
                 <strong>Resposta 1.</strong>
-                <div class="blank" aria-label="Campo para resposta 1"></div>
+                <div class="blank" aria-label="Campo para resposta 1">
+                  
+                <li>Partículas alfa: Linhas <strong>Discretas</strong>. Emissão monoenergética de núcleos bem definidos [Knoll 2nd Ed].</li>
+                <li>Partículas beta: <strong>Contínuo</strong>. A energia de decaimento é compartilhada entre o elétron beta e o antineutrino [Knoll 2nd Ed].</li>
+                <li>Raios gama: Linhas <strong>Discretas</strong>. Fótons emitidos de transições nucleares específicas (monoenergéticos) [Knoll 2nd Ed].</li>
+                <li>Raios-X característicos: Linhas <strong>Discretas</strong>. Originam-se de diferenças de energia discretas entre camadas atômicas [Knoll 2nd Ed].</li>
+                <li>Elétrons de conversão interna: Linhas <strong>Discretas</strong>. São ejetados com energia cinética específica, $T_i = Q - B_i$ [Knoll 2nd Ed].</li>
+                <li>Elétrons Auger: Linhas <strong>Discretas</strong>. Produzem um espectro de energia discreto, inerente às transições atômicas [Knoll 2nd Ed].</li>
+                <li>Fissão espontânea (Fragmentos de fissão): <strong>Contínuo</strong>. O espectro de energia cinética dos fragmentos é largo (ver gráfico 1.4b, Knoll).</li>
+                <li>Bremsstrahlung: <strong>Contínuo</strong>. Resulta da desaceleração contínua de elétrons/partículas beta no campo Coulombiano [Knoll 4aEd].</li>
+                <li>Radiação de aniquilação: Linhas <strong>Discretas</strong>. Resulta em dois fótons com energia fixa de $0.511 \text{ MeV}$.</li>
+                  
+                </div>
                 <p class="hint">Dica: escreva discreto ou contínuo ao lado de cada item (a - i).</p>
               </div>
             </li>
