--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -215,7 +215,7 @@
             <!-- Q1 -->
             <li id="q1">
               <div class="enunciado">
-                <strong>1) Os espectros de energia das radiações podem ser classificados em dois grupos: espectro formado por linhas discretas ou espectro contínuo.</strong>
+                <strong>Os espectros de energia das radiações podem ser classificados em dois grupos: espectro formado por linhas discretas ou espectro contínuo.</strong>
                 <p>Para cada fonte de radiação da lista dada abaixo, indique se a melhor descrição é <strong>linhas discretas</strong> ou <strong>contínuo</strong>:</p>
                 <ol class="sub">
                   <li>Partículas alfa</li>
@@ -230,26 +230,27 @@
                 </ol>
               </div>
 
-              <div class="resposta">
-                <strong>Resposta 1.</strong>
-                <ol>
-                  <li><strong>Partículas alfa:</strong> Linhas <strong>discretas</strong>. Emissão monoenergética de núcleos com níveis bem definidos (Knoll, 2ª Ed.).</li>
-                  <li><strong>Partículas beta:</strong> <strong>Contínuo</strong>. A energia de decaimento é compartilhada entre o elétron beta e o antineutrino.</li>
-                  <li><strong>Raios gama:</strong> Linhas <strong>discretas</strong>. Fótons emitidos por transições nucleares específicas.</li>
-                  <li><strong>Raios-X característicos:</strong> Linhas <strong>discretas</strong>. Originam-se de diferenças de energia discretas entre camadas atômicas.</li>
-                  <li><strong>Elétrons de conversão interna:</strong> Linhas <strong>discretas</strong>. Energia cinética dada aproximadamente por \( T_{i} = Q - B_{i} \).</li>
-                  <li><strong>Elétrons Auger:</strong> Linhas <strong>discretas</strong>. Produzem um espectro de energia discreto, inerente às transições atômicas.</li>
-                  <li><strong>Fissão espontânea (fragmentos):</strong> <strong>Contínuo</strong>. O espectro de energia cinética dos fragmentos é largo.</li>
-                  <li><strong>Bremsstrahlung:</strong> <strong>Contínuo</strong>. Resulta da desaceleração contínua de elétrons/partículas beta no campo Coulombiano.</li>
-                  <li><strong>Radiação de aniquilação:</strong> Linhas <strong>discretas</strong>. Resulta em dois fótons com energia fixa de \( 0.511\,\text{MeV} \).</li>
-                </ol>
-              </div>
-            </li>
+<div class="resposta">
+  <strong>Resposta 1. (Knoll, 2ª Ed.)</strong>
+
+  <ol type="a">
+    <li><strong>Partículas alfa:</strong> Linhas <strong>discretas</strong>. Emissão monoenergética de núcleos com níveis bem definidos.</li>
+    <li><strong>Partículas beta:</strong> <strong>Contínuo</strong>. A energia de decaimento é compartilhada entre o elétron beta e o antineutrino.</li>
+    <li><strong>Raios gama:</strong> Linhas <strong>discretas</strong>. Fótons emitidos por transições nucleares específicas.</li>
+    <li><strong>Raios-X característicos:</strong> Linhas <strong>discretas</strong>. Originam-se de diferenças de energia discretas entre camadas atômicas.</li>
+    <li><strong>Elétrons de conversão interna:</strong> Linhas <strong>discretas</strong>. Energia cinética dada aproximadamente por \( T_{i} = Q - B_{i} \).</li>
+    <li><strong>Elétrons Auger:</strong> Linhas <strong>discretas</strong>. Produzem um espectro de energia discreto, inerente às transições atômicas.</li>
+    <li><strong>Fissão espontânea (fragmentos):</strong> <strong>Contínuo</strong>. O espectro de energia cinética dos fragmentos é largo.</li>
+    <li><strong>Bremsstrahlung:</strong> <strong>Contínuo</strong>. Resulta da desaceleração contínua de elétrons/partículas beta no campo Coulombiano.</li>
+    <li><strong>Radiação de aniquilação:</strong> Linhas <strong>discretas</strong>. Resulta em dois fótons com energia fixa de \( 0.511\,\text{MeV} \).</li>
+  </ol>
+</div>
+
 
             <!-- Q2 -->
             <li id="q2">
               <div class="enunciado">
-                <strong>2) Qual destes possui a maior energia: um elétron de conversão interna da camada L ou da camada M, se ambos vieram da mesma energia (nuclear) de excitação?</strong>
+                <strong>Qual destes possui a maior energia: um elétron de conversão interna da camada L ou da camada M, se ambos vieram da mesma energia (nuclear) de excitação?</strong>
               </div>
               <div class="resposta">
                 <strong>Resposta 2.</strong>
@@ -261,7 +262,7 @@
             <!-- Q3 -->
             <li id="q3">
               <div class="enunciado">
-                <strong>3) Qual o valor da máxima energia que um átomo de hélio duplamente ionizado (partícula alfa) pode ser acelerado por um gerador de tensão contínua com tensão máxima de 3 MeV?</strong>
+                <strong>Qual o valor da máxima energia que um átomo de hélio duplamente ionizado (partícula alfa) pode ser acelerado por um gerador de tensão contínua com tensão máxima de 3 MeV?</strong>
               </div>
               <div class="resposta">
                 <strong>Resposta 3.</strong>
@@ -272,7 +273,7 @@
             <!-- Q4 -->
             <li id="q4">
               <div class="enunciado">
-                <strong>4) Com o auxílio da figura dada,</strong>
+                <strong>Com o auxílio da figura dada,</strong>
                 <p>estime a energia restante de um feixe de prótons de 5 MeV após passar por 100 µm num bloco de Si.</p>
                 <figure>
                   <img
@@ -341,7 +342,7 @@
             <!-- Q7 -->
             <li id="q7">
               <div class="enunciado">
-                <strong>7) Repetir o exercício 8 usando um feixe de partículas alfa de 3 MeV em ouro.</strong>
+                <strong>Repetir o exercício 8 usando um feixe de partículas alfa de 3 MeV em ouro.</strong>
                 <p>(use a figura do exercício 6).</p>
               </div>
               <div class="resposta">
@@ -353,7 +354,7 @@
             <!-- Q8 -->
             <li id="q8">
               <div class="enunciado">
-                <strong>8) Estimar o tempo necessário para uma partícula alfa de 5 MeV desacelerar e parar num bloco de Si.</strong>
+                <strong>Estimar o tempo necessário para uma partícula alfa de 5 MeV desacelerar e parar num bloco de Si.</strong>
                 <p>Repita para gás hidrogênio.</p> 
                 <p class="muted">Considerar \( R_{\text{Si}}=2.1\times10^{-5}\,\text{m} \) e \( R_{\text{H}}=0.1\,\text{m} \).</p>
               </div>
@@ -366,7 +367,7 @@
             <!-- Q9 -->
             <li id="q9">
               <div class="enunciado">
-                <strong>9) Uma onda senoidal propaga-se de acordo com a expressão.</strong>
+                <strong>Uma onda senoidal propaga-se de acordo com a expressão.</strong>
                 <p>\( y(x,t)=0{,}00327\sin(72{,}1x-2{,}72t), \) onde y é dado em metros (SI).</p>
                 <ol class="sub">
                   <li>Qual a frequência da onda em Hz?</li>
@@ -388,7 +389,7 @@
             <!-- Q10 -->
             <li id="q10">
               <div class="enunciado">
-                <strong>10) Repetir os itens do exercício anterior para a onda:</strong>
+                <strong>Repetir os itens do exercício anterior para a onda:</strong>
                 <p>\( y(x,t)=7{,}5\sin(1{,}2\times10^{7}x-3{,}623\times10^{15}t)\ \text{V/m} \). Sendo esta a componente campo elétrico de uma onda eletromagnética, calcule a amplitude do campo magnético correspondente, encontre sua localização no espectro eletromagnético e diga em que faixa se encontra. No caso de estar no espectro visível, qual é a cor correspondente?</p>
               </div>
               <div class="resposta">
@@ -400,7 +401,7 @@
             <!-- Q11 -->
             <li id="q11">
               <div class="enunciado">
-                <strong>11) O canal 6 no antigo sistema de televisão convencional (analógico) ocupa uma faixa de frequências que inicia em 82 MHz. Sabendo que a banda para cada canal de TV é de 6 MHz:</strong>
+                <strong>O canal 6 no antigo sistema de televisão convencional (analógico) ocupa uma faixa de frequências que inicia em 82 MHz. Sabendo que a banda para cada canal de TV é de 6 MHz:</strong>
                 <ol class="sub">
                   <li>Calcule a banda do canal 6 em comprimento de onda</li>
                   <li>Idem para número de onda</li>
@@ -421,7 +422,7 @@
             <!-- Q12 -->
             <li id="q12">
               <div class="enunciado">
-                <strong>12) Durante uma desintegração radioativa, um núcleo emite raio gama, cujo fóton tem energia de 1,35 MeV.</strong>
+                <strong>Durante uma desintegração radioativa, um núcleo emite raio gama, cujo fóton tem energia de 1,35 MeV.</strong>
                 <p>Qual é o comprimento de onda e o número de onda correspondente a este fóton?</p>
               </div>
               <div class="resposta">
@@ -433,7 +434,7 @@
             <!-- Q13 -->
             <li id="q13">
               <div class="enunciado">
-                <strong>13) As figuras abaixo mostram os espectros obtidos de dois corpos aquecidos.</strong>
+                <strong>As figuras abaixo mostram os espectros obtidos de dois corpos aquecidos.</strong>
                 <p>Com base na Lei de Wien, determine a temperatura de ambos em graus Celsius.</p>
                 <div style="display:flex; gap:20px; justify-content:center; flex-wrap:wrap;">
                   <figure>
@@ -463,7 +464,7 @@
             <!-- Q14 -->
             <li id="q14">
               <div class="enunciado">
-                <strong>14) A partir da equação de Rydberg, determine, para o hidrogênio, as frequências dos dois primeiros valores para k, na série de Balmer.</strong>
+                <strong>A partir da equação de Rydberg, determine, para o hidrogênio, as frequências dos dois primeiros valores para k, na série de Balmer.</strong>
                 <p>Para cada um dos resultados identifique a faixa do espectro e, caso seja o espectro visível, a cor correspondente.</p>
               </div>
               <div class="resposta">
@@ -475,7 +476,7 @@
             <!-- Q15 -->
             <li id="q15">
               <div class="enunciado">
-                <strong>15) Série de Lyman (H).</strong>
+                <strong>Série de Lyman (H)</strong>
                 <p>Repetir o exercício 12 para a série de Lyman para os dois primeiros valores pares de k.</p>
               </div>
               <div class="resposta">
