Add question 13 with spectrum analysis details
Adiciona enunciado e resposta para a questão 13 sobre espectros de corpos aquecidos.

--- a/4th_Lista_2.html
+++ b/4th_Lista_2.html
@@ -431,35 +431,42 @@
               </div>
             </li>
 
-            <!-- Q13 -->
-            <li id="q13">
-              <div class="enunciado">
-                <strong>As figuras abaixo mostram os espectros obtidos de dois corpos aquecidos.</strong>
-                <p>Com base na Lei de Wien, determine a temperatura de ambos em graus Celsius.</p>
-                <div style="display:flex; gap:20px; justify-content:center; flex-wrap:wrap;">
-                  <figure>
-                    <img
-                      class="fig-pair"
-                      src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-13-a.png?raw=1"
-                      alt="A"
-                    />
-                    <figcaption>Corpo A</figcaption>
-                  </figure>
-                  <figure>
-                    <img
-                      class="fig-pair"
-                      src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-13-b.png?raw=1"
-                      alt="B"
-                    />
-                    <figcaption>Corpo B</figcaption>
-                  </figure>
-                </div>
-              </div>
-              <div class="resposta">
-                <strong>Resposta 13.</strong>
-                <p>Ler \( \lambda_{\max} \) em cada gráfico e aplicar a lei de Wien para obter \( T \) (depois converter para °C).</p>
-              </div>
-            </li>
+<!-- Q13 -->
+<li id="q13">
+  <div class="enunciado">
+    <strong>As figuras abaixo mostram os espectros obtidos de dois corpos aquecidos.</strong>
+    <p>Com base na Lei de Wien, determine a temperatura de ambos em graus Celsius.</p>
+    <div style="display:flex; gap:20px; justify-content:center; flex-wrap:wrap;">
+      <figure>
+        <img
+          class="fig-pair"
+          src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-13-a.png?raw=1"
+          alt="A"
+        />
+        <figcaption>Corpo A</figcaption>
+      </figure>
+      <figure>
+        <img
+          class="fig-pair"
+          src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/24102025/4th_figure-13-b.png?raw=1"
+          alt="B"
+        />
+        <figcaption>Corpo B</figcaption>
+      </figure>
+    </div>
+  </div>
+
+  <div class="resposta">
+    <strong>Resposta 13.</strong>
+    <p>Os espectros A e B representam a emissão de radiação de corpo negro para dois corpos diferentes. O pico de emissão de cada curva ocorre em um comprimento de onda diferente (<em>λ<sub>máx</sub></em>), indicando temperaturas distintas. O corpo cujo pico está deslocado para comprimentos de onda menores (mais próximo do azul/violeta) é o mais quente, enquanto aquele cujo pico está em comprimentos de onda maiores (mais próximo do vermelho/infravermelho) possui menor temperatura.</p>
+    <p>Para determinar a temperatura absoluta de cada corpo, deve-se ler o valor aproximado de <em>λ<sub>máx</sub></em> em cada gráfico e aplicar a Lei de Wien:</p>
+
+    <p style="text-align:center;">\( \lambda_{\max} \cdot T = 2{,}898 \times 10^{-3}\ \text{m·K} \)</p>
+
+    <p>Assim, \( T = \dfrac{2{,}898 \times 10^{-3}}{\lambda_{\max}} \) em Kelvin, e a conversão para graus Celsius é dada por \( T(°C) = T(K) - 273 \).</p>
+  </div>
+</li>
+
 
             <!-- Q14 -->
             <li id="q14">
